--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rastree",
   "version": "0.0.1",
-  "description": "ReaseASTree for CSS, HTML, JS, JSX",
+  "description": "WIP: ReaseASTree for CSS, HTML, JS, JSX",
   "author": "cftcview <cftcview@gmail.com>",
   "homepage": "https://github.com/wareset/rastree#readme",
   "license": "MIT",
